--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
         <activity android:name=".Activities.ProfileActivity">
         </activity>
-        <activity android:name=".Activities.PostActivity">
+        <activity android:name=".Activities.MainActivity">
         </activity>
         <activity android:name=".Activities.DetailsActivity">
         </activity>
